Configuro rutas generales y del modulo de seguridad

--- a/src/app/assets/footer/footer.component.html
+++ b/src/app/assets/footer/footer.component.html
@@ -3,12 +3,12 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">MisionTIC</h5>
-          <p class="grey-text text-lighten-4">Equipo 7 - Grupo 25</p>
+          <p class="grey-text text-lighten-4">Equipo 9 - Grupo 27</p>
         </div>
         <div class="col l4 offset-l2 s12">
           <h5 class="white-text">Miembros de equipo</h5>
           <ul>
-            <li><a class="grey-text text-lighten-3" href="#!">Javier</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Sergio</a></li>
             <li><a class="grey-text text-lighten-3" href="#!">Luis</a></li>
             <li><a class="grey-text text-lighten-3" href="#!">Carolina</a></li>
             <li><a class="grey-text text-lighten-3" href="#!">Lorena</a></li>
