--- a/src/app/assets/navbar/navbar.component.html
+++ b/src/app/assets/navbar/navbar.component.html
@@ -1,10 +1,15 @@
 <nav>
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo">Logo</a>
+      <a routerLink="/" class="brand-logo">Logo</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">JavaScript</a></li>
+        <li><a routerLink="/encomiendas">Encomiendas</a></li>
+        <li><a routerLink="/clientes">Clientes</a></li>
+        <li><a routerLink="/servicios">Servicios</a></li>
+        <li *ngIf="activeSession"><a routerLink="/admin/create">Registrar Usuario</a></li>
+        <li *ngIf="!activeSession"><a routerLink="/seguridad/login">Login</a></li>
+        <li *ngIf="activeSession"><a routerLink="/seguridad/logout">Cerrar Sesion</a></li>
+  
+        <!-- <li><a routerLink="/estaciones/create">Estaciones</a></li> -->
       </ul>
     </div>
-</nav>
+  </nav>
