--- a/src/app/assets/footer/footer.component.html
+++ b/src/app/assets/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="page-footer">
+<footer class="page-footer #26a69a teal lighten-1">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
@@ -8,10 +8,10 @@
         <div class="col l4 offset-l2 s12">
           <h5 class="white-text">Miembros de equipo</h5>
           <ul>
-            <li><a class="grey-text text-lighten-3" href="#!">Sergio</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Luis</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Carolina</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Lorena</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">RENDON SAMBONI ANGIE CAROLINA</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">OLMOS DURÁN JOAN CAMILO</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">PIÑA VARGAS SERGIO ESTEBAN</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">PEDREROS ARAQUE LAURA FERNANDA</a></li>
           </ul>
         </div>
       </div>
@@ -19,7 +19,7 @@
     <div class="footer-copyright">
       <div class="container">
       © 2014 Copyright Text
-      <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+      <a class="grey-text text-lighten-4 right" href="#!">Ayuda</a>
       </div>
     </div>
 </footer>
