--- a/src/app/assets/navbar/navbar.component.html
+++ b/src/app/assets/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav>
-    <div class="nav-wrapper">
-      <a routerLink="/" class="brand-logo">Logo</a>
+    <div class="nav-wrapper #26a69a teal lighten-1">
+      <a routerLink="/" class="brand-logo">Amazon</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a routerLink="/encomiendas">Encomiendas</a></li>
         <li><a routerLink="/clientes">Clientes</a></li>
