--- a/src/app/assets/navbar/navbar.component.html
+++ b/src/app/assets/navbar/navbar.component.html
@@ -6,6 +6,7 @@
         <li><a routerLink="/clientes">Clientes</a></li>
         <li><a routerLink="/servicios">Servicios</a></li>
         <li *ngIf="activeSession"><a routerLink="/admin/create">Registrar Usuario</a></li>
+         <!-- Sesion -->
         <li *ngIf="!activeSession"><a routerLink="/seguridad/login">Login</a></li>
         <li *ngIf="activeSession"><a routerLink="/seguridad/logout">Cerrar Sesion</a></li>
   
