--- a/src/app/modulos/admin/usuarios/create/create.component.html
+++ b/src/app/modulos/admin/usuarios/create/create.component.html
@@ -13,7 +13,7 @@
       </div>
       <div class="row">
         <div class="input-field col s12">
-          <input formControlName="telefono" type="text" class="validate">
+          <input formControlName="telefono" type="number" class="validate">
           <label for="telefono">Telefono</label>
         </div>
       </div>
