--- a/src/app/modulos/servicios/get/get.component.html
+++ b/src/app/modulos/servicios/get/get.component.html
@@ -1,1 +1,29 @@
-<p>get works!</p>
+<div class="container">
+    <br>
+    <a routerLink="/servicios/create" class="btn">Registrar servicio</a>
+   
+    <table class="table responsive">
+      <thead>
+        <tr>
+            <th>Cliente origen</th>
+            <th>Cliente destino</th>
+            <th>Encomienda</th>
+            <th>Valor</th>
+            <th>Acciones</th>
+        </tr>
+      </thead>
+   
+      <tbody>
+        <tr *ngFor="let p of listado">
+          <td>{{p.origen}}</td>
+          <td>{{p.destino}}</td>
+          <td>{{p.encomienda}}</td>
+          <td>{{p.valor}}</td>
+          <td>
+            <a routerLink="/servicios/edit/{{p.id}}" class="btn">Editar</a>
+            <button class="btn red" (click)="delete(p.id)">Eliminar</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+</div>
