--- a/src/app/modulos/servicios/edit/edit.component.html
+++ b/src/app/modulos/servicios/edit/edit.component.html
@@ -1,1 +1,48 @@
-<p>edit works!</p>
+<div class="container">
+    <h3 class="center-align">Editar Servicio</h3>
+   
+    <form [formGroup]="fgValidacion" class="col s12" (ngSubmit)="edit()">
+        <input formControlName="id" type="hidden" class="validate">
+        <div class="row">
+            <div class="input-field col s12">
+                <b>Cliente origen:</b>
+                <select class="browser-default" formControlName="origen" name="origen">
+                    <option value="" disabled selected>Seleccione el cliente origen</option>
+                    <option *ngFor="let cliente of listadoClientes" value="{{cliente.nombre}} - {{cliente.apellidos}}">{{cliente.nombre}} - {{cliente.apellidos}}</option>
+                </select>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12">
+                <b>Cliente destino:</b>
+                <select class="browser-default" formControlName="destino" name="destino">
+                    <option value="" disabled selected>Seleccione el cliente destino</option>
+                    <option *ngFor="let cliente of listadoClientes" value="{{cliente.nombre}} - {{cliente.apellidos}}">{{cliente.nombre}} - {{cliente.apellidos}}</option>
+                </select>
+            </div>
+        </div>
+        
+        <div class="row">
+            <div class="input-field col s12">
+                <b>Encomienda:</b>
+                <select class="browser-default" formControlName="encomienda" >
+                    <option value="" disabled selected>Seleccione la Encomienda</option>
+                    <option *ngFor="let encomienda of listadoEncomiendas" value="{{encomienda.nombre}} - {{encomienda.apellidos}}">{{encomienda.nombre}} - {{encomienda.apellidos}}</option>
+                </select>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="input-field col s12">
+                <input formControlName="valor" type="number" class="validate">
+                <label for="valor" style="width:auto">Valor</label>
+            </div>
+        </div>
+    
+        <div class="row center-align">
+            <button [disabled]="!fgValidacion.valid" class="btn waves-effect waves-light" type="submit" name="action">Guardar
+                <i class="material-icons right">send</i>
+            </button>
+        </div>
+    </form>
+</div>
