--- a/src/app/modulos/encomiendas/create/create.component.html
+++ b/src/app/modulos/encomiendas/create/create.component.html
@@ -1,1 +1,39 @@
-<p>create works!</p>
+<div class="container">
+    <h3 class="center-align">Registrar encomienda</h3>
+    <form [formGroup]="fgValidacion" class="col s12" (ngSubmit)="store()">
+
+        <div class="row">
+            <div class="input-field col s12">
+                <input formControlName="descripcion" type="text" class="validate">
+                <label for="descripcion" style="width:auto">Descripcion</label>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="input-field col s12">
+                <input formControlName="peso" type="number" class="validate">
+                <label for="peso" style="width:auto">Peso</label>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="input-field col s12">
+                <input formControlName="tipo" type="text" class="validate">
+                <label for="tipo" style="width:auto">Tipo</label>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="input-field col s12">
+                <input formControlName="presentacion" type="text" class="validate">
+                <label for="presentacion" style="width:auto">Presentacion</label>
+            </div>
+        </div>
+   
+        <div class="row center-align">
+            <button [disabled]="!fgValidacion.valid" class="btn waves-effect waves-light" type="submit" name="action">Guardar
+                <i class="material-icons right">send</i>
+            </button>
+        </div>
+    </form>
+</div>
