Ajusto las lista de encomiendas y clientes en el formulario de crear servicios

--- a/src/app/modulos/admin/usuarios/get/get.component.html
+++ b/src/app/modulos/admin/usuarios/get/get.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <br>
-    <a routerLink="/admin/create" class="btn">Registrar Persona</a>
+    <a routerLink="/admin/create" class="btn">Registrar usuario</a>
    
     <table class="table responsive">
       <thead>
