--- a/src/app/modulos/servicios/create/create.component.html
+++ b/src/app/modulos/servicios/create/create.component.html
@@ -1,12 +1,13 @@
 <div class="container">
     <h3 class="center-align">Registrar servicio</h3>
     <form [formGroup]="fgValidacion" class="col s12" (ngSubmit)="store()">
+        
         <div class="row">
             <div class="input-field col s12">
                 <b>Cliente origen:</b>
                 <select class="browser-default" formControlName="origen">
                     <option value="" disabled selected>Seleccione el cliente origen</option>
-                    <option *ngFor="let cliente of listadoClientes" value="{{cliente.nombre}} - {{cliente.apellidos}}">{{cliente.nombre}} - {{cliente.apellidos}}</option>
+                    <option *ngFor="let cliente of listadoClientes" value="{{cliente.cedula}} - {{cliente.apellidos}} {{cliente.nombre}}">{{cliente.cedula}} - {{cliente.apellidos}} {{cliente.nombre}}</option>
                 </select>
             </div>
         </div>
@@ -15,7 +16,7 @@
                 <b>Cliente destino:</b>
                 <select class="browser-default" formControlName="destino" >
                     <option value="" disabled selected>Seleccione el cliente destino</option>
-                    <option *ngFor="let cliente of listadoClientes" value="{{cliente.nombre}} - {{cliente.apellidos}}">{{cliente.nombre}} - {{cliente.apellidos}}</option>
+                    <option *ngFor="let cliente of listadoClientes" value="{{cliente.cedula}} - {{cliente.apellidos}} {{cliente.nombre}}">{{cliente.cedula}} - {{cliente.apellidos}} {{cliente.nombre}}</option>
                 </select>
             </div>
         </div>
@@ -25,7 +26,7 @@
                 <b>Encomienda:</b>
                 <select class="browser-default" formControlName="encomienda" >
                     <option value="" disabled selected>Seleccione la Encomienda</option>
-                    <option *ngFor="let encomienda of listadoEncomiendas" value="{{encomienda.nombre}} - {{encomienda.apellidos}}">{{encomienda.nombre}} - {{encomienda.apellidos}}</option>
+                    <option *ngFor="let encomienda of listadoEncomiendas" value="{{encomienda.descripcion}} - {{encomienda.peso}} - {{encomienda.presentacion}}">{{encomienda.descripcion}} - {{encomienda.peso}} - {{encomienda.presentacion}}</option>
                 </select>
             </div>
         </div>
