Ajusto vista de login y redireccion

--- a/src/app/assets/index/index.component.html
+++ b/src/app/assets/index/index.component.html
@@ -1,1 +1,16 @@
-<p>Bienvenido al sistema</p>
+<div class="container">
+    <div class="section no-pad-bot" id="index-banner">
+        <div class="container">
+            <br><br>
+            <h1 class="header center orange-text">Bienvenido al sistema Amazon</h1>
+            <div class="row center">
+            <h5 class="header col s12 light">Podrás crear encomiendas, clientes y registrar servicios</h5>
+            </div>
+            <div class="row center">
+            <a href="/admin/create" id="download-button" class="btn-large waves-effect waves-light orange">Registrate</a>
+            </div>
+            <br><br>
+
+        </div>
+    </div>
+</div>
